--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
     build: ./.docker/mock_server_api
     ports:
       - "3000:3000"
+    environment:
+      - PORT=3000
     restart: always
     volumes:
       - ./.docker/mock_server_api:/api
