--- a/.docker/mock_server_api/package.json
+++ b/.docker/mock_server_api/package.json
@@ -7,6 +7,7 @@
     "amqplib": "^0.8.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.13"
   }
 }
