feat: adicionadas variáveis de ambiente para redis e configs de rabbit

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+TOTAL_OF_CONSUMERS=25
+PREFETCH_BY_CONSUMER=24
+
+REDIS_EXPIRATION_TTL=120
+
 RABBITMQ_DEFAULT_USER=rabbitmq
 RABBITMQ_DEFAULT_PASS=rabbitmq
 RABBITMQ_DEFAULT_HOST=micro-codeflix-rabbit
